--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,175 +1,187 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2vh;
-  min-height: 8vh;
-  background-color: rgba(0, 0, 0, 0.9);
-  backdrop-filter: blur(5px);
-  color: rgb(236, 229, 225);
-  font-family: poppins;
-  font-size: 20px;
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
-}
-
-ul {
-  display: flex;
-  list-style: none;
-  text-decoration: none;
-}
-nav ul li {
-  padding: 15px;
-  margin: 0 5px;
-  position: relative;
-}
-nav ul li a {
-  color: white;
-  text-decoration: none;
-  transition: color 0.3s ease, text-shadow 0.3s ease;
-}
-
-nav ul li a:hover {
-  color: rgb(236, 229, 225);
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-    0 0 20px rgba(255, 255, 255, 0.6);
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-
-.rounded-box {
-  border-bottom-right-radius: 50%;
-  border-top-right-radius: 50%;
-  background-color: rgb(236, 229, 225);
-  padding: 1.4rem;
-  margin: 1rem;
-  width: 50%;
-}
-
-.About-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: black;
-  color: rgb(236, 229, 225);
-  font-family: Impact;
-}
-
-.About-box {
-  width: 80%;
-  display: flex;
-  align-items: start;
-  flex-direction: column;
-  margin: 3rem 0 2rem 0;
-}
-
-.name {
-  font-size: 7rem;
-  font-weight: 700;
-}
-
-.about-me {
-  display: flex;
-  justify-content: space-between;
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-.ParaOne,
-.ParaTwo {
-  font-family: poppins;
-  width: 47%;
-}
-
-.contain {
-  position: relative;
-  width: 100vw;
-  height: 45vh;
-  margin-left: calc(-55vw + 50%);
-  background-color: rgb(236, 229, 225);
-  background-image: linear-gradient(0deg, transparent 99%, gray 100%, gray 100%),
-    linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
-  background-size: 95px 95px;
-  border-top-right-radius: 500px;
-  border-bottom-right-radius: 500px;
-  overflow: hidden;
-  display: flex;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2vh;
+    min-height: 8vh;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(5px);
+    color: rgb(236, 229, 225);
+    font-family: poppins;
+    font-size: 20px;
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+  }
+  
+  ul {
+    display: flex;
+    list-style: none;
+    text-decoration: none;
+  }
+  nav ul li {
+    padding: 15px;
+    margin: 0 5px;
+    position: relative;
+  }
+  nav ul li a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+  }
+  
+  nav ul li a:hover {
+    color: rgb(236, 229, 225);
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+      0 0 20px rgba(255, 255, 255, 0.6);
+  }
+  
+  .logo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .rounded-box {
+    border-bottom-right-radius: 50%;
+    border-top-right-radius: 50%;
+    background-color: rgb(236, 229, 225);
+    padding: 1.4rem;
+    margin: 1rem;
+    width: 50%;
+  }
+  
+  .About-page {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+    height: 100vh;
+    background-color: black;
+    color: rgb(236, 229, 225);
+    font-family: Impact;
+  }
+  
+  .About-box {
+    width: 80%;
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    margin: 3rem 0 2rem 0;
+  }
+  
+  .name {
+    font-size: 5.83vw;
+    font-weight: 700;
+  }
+  
+  .about-me {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  
+  .about-me a {
+      color: rgb(236, 229, 225);
+      text-decoration: underline;
+  }
+  
+  .ParaOne,
+  .ParaTwo,
+  .ParaThree {
+    font-family: poppins;
+    margin: 0 5rem 0 0; 
+  }
+  
+  .ParaThree {
+    width: 100%;
+  }
 
-
-
-
-
-.Skills-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: rgb(236, 229, 225);
-}
-
-.Projects-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: black;
-}
-
-footer {
-  background-color: #000000;
-  color: #ece5e1;
-  padding: 20px 0;
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-}
-
-.footer-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-}
-
-.footer-social {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-}
-
-.footer-social a {
-  display: inline-block;
-  text-decoration: none;
-}
-
-.footer-social i {
-  font-size: 3em;
-  color: #ece5e1;
-  transition: color 0.3s ease, text-shadow 0.3s ease;
-}
-
-i:hover {
-  color: white;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-    0 0 20px rgba(255, 255, 255, 0.6);
-}
+  .contain {
+    position: relative;
+    width: 100vw;
+    height: 45vh;
+    margin-left: calc(-55vw + 50%);
+    background-color: rgb(236, 229, 225);
+    background-image: linear-gradient(0deg, transparent 99%, gray 100%, gray 100%),
+      linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
+    background-size: 95px 95px;
+    border-top-right-radius: 500px;
+    border-bottom-right-radius: 500px;
+    overflow: hidden;
+    display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  
+  
+  
+  
+  .Skills-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: rgb(236, 229, 225);
+  }
+  
+  .Projects-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: black;
+  }
+  
+  footer {
+    background-color: #000000;
+    color: #ece5e1;
+    padding: 20px 0;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+  }
+  
+  .footer-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+  
+  .footer-social {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .footer-social a {
+    display: inline-block;
+    text-decoration: none;
+  }
+  
+  .footer-social i {
+    font-size: 3em;
+    color: #ece5e1;
+    transition: color 0.3s ease, text-shadow 0.3s ease;
+  }
+  
+  i:hover {
+    color: white;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+      0 0 20px rgba(255, 255, 255, 0.6);
+  }
+  
