--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,187 +1,238 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2vh;
-    min-height: 8vh;
-    background-color: rgba(0, 0, 0, 0.9);
-    backdrop-filter: blur(5px);
-    color: rgb(236, 229, 225);
-    font-family: poppins;
-    font-size: 20px;
-    position: fixed;
-    width: 100%;
-    z-index: 1000;
-  }
-  
-  ul {
-    display: flex;
-    list-style: none;
-    text-decoration: none;
-  }
-  nav ul li {
-    padding: 15px;
-    margin: 0 5px;
-    position: relative;
-  }
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s ease, text-shadow 0.3s ease;
-  }
-  
-  nav ul li a:hover {
-    color: rgb(236, 229, 225);
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-      0 0 20px rgba(255, 255, 255, 0.6);
-  }
-  
-  .logo {
-    display: flex;
-    align-items: center;
-  }
-  
-  .rounded-box {
-    border-bottom-right-radius: 50%;
-    border-top-right-radius: 50%;
-    background-color: rgb(236, 229, 225);
-    padding: 1.4rem;
-    margin: 1rem;
-    width: 50%;
-  }
-  
-  .About-page {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: black;
-    color: rgb(236, 229, 225);
-    font-family: Impact;
-  }
-  
-  .About-box {
-    width: 80%;
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-    margin: 3rem 0 2rem 0;
-  }
-  
-  .name {
-    font-size: 5.83vw;
-    font-weight: 700;
-  }
-  
-  .about-me {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    font-size: 1rem;
-    font-weight: 500;
-  }
-  
-  .about-me a {
-      color: rgb(236, 229, 225);
-      text-decoration: underline;
-  }
-  
-  .ParaOne,
-  .ParaTwo,
-  .ParaThree {
-    font-family: poppins;
-    margin: 0 5rem 0 0; 
-  }
-  
-  .ParaThree {
-    width: 100%;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  .contain {
-    position: relative;
-    width: 100vw;
-    height: 45vh;
-    margin-left: calc(-55vw + 50%);
-    background-color: rgb(236, 229, 225);
-    background-image: linear-gradient(0deg, transparent 99%, gray 100%, gray 100%),
-      linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
-    background-size: 95px 95px;
-    border-top-right-radius: 500px;
-    border-bottom-right-radius: 500px;
-    overflow: hidden;
-    display: flex;
-      justify-content: center;
-      align-items: center;
+html {
+  scroll-behavior: smooth;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2vh;
+  min-height: 8vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(5px);
+  color: rgb(236, 229, 225);
+  font-family: poppins;
+  font-size: 20px;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  text-decoration: none;
+}
+nav ul li {
+  padding: 15px;
+  margin: 0 5px;
+  position: relative;
+}
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+nav ul li a:hover {
+  color: rgb(236, 229, 225);
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+    0 0 20px rgba(255, 255, 255, 0.6);
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.rounded-box {
+  border-bottom-right-radius: 50%;
+  border-top-right-radius: 50%;
+  background-color: rgb(236, 229, 225);
+  padding: 1.4rem;
+  margin: 1rem;
+  width: 50%;
+}
+
+.About-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
+  color: rgb(236, 229, 225);
+  font-family: Impact;
+}
+
+.About-box {
+  width: 80%;
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  margin: 3rem 0 2rem 0;
+}
+
+.name {
+  font-size: 5.83vw;
+  font-weight: 700;
+}
+.hand {
+  display: inline-block;
+  animation: wave 2.5s ease-in-out infinite;
+  transform-origin: 70% 70%;
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  
-  
-  
-  
-  .Skills-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: rgb(236, 229, 225);
+  10% {
+    transform: rotate(14deg);
   }
-  
-  .Projects-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: black;
+  20% {
+    transform: rotate(-8deg);
   }
-  
-  footer {
-    background-color: #000000;
-    color: #ece5e1;
-    padding: 20px 0;
-    text-align: center;
-    font-family: "Poppins", sans-serif;
+  30% {
+    transform: rotate(14deg);
   }
-  
-  .footer-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+  40% {
+    transform: rotate(-4deg);
   }
-  
-  .footer-social {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  50% {
+    transform: rotate(10deg);
   }
-  
-  .footer-social a {
-    display: inline-block;
-    text-decoration: none;
+  60% {
+    transform: rotate(0deg);
   }
-  
-  .footer-social i {
-    font-size: 3em;
-    color: #ece5e1;
-    transition: color 0.3s ease, text-shadow 0.3s ease;
+  100% {
+    transform: rotate(0deg);
   }
-  
-  i:hover {
-    color: white;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-      0 0 20px rgba(255, 255, 255, 0.6);
+}
+
+.about-me {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.about-me a {
+  color: rgb(236, 229, 225);
+  text-decoration: underline;
+}
+
+.ParaOne,
+.ParaTwo,
+.ParaThree {
+  font-family: poppins;
+  margin: 0 5rem 0 0;
+}
+
+.ParaThree {
+  width: 100%;
+}
+
+.contain {
+  width: 100vw;
+  height: 45vh;
+  margin-left: calc(-55vw + 50%);
+  background-color: rgb(236, 229, 225);
+  background-image: linear-gradient(0deg, transparent 99%, gray 100%, gray 100%),
+linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
+  background-size: 95px 95px;
+  border-top-right-radius: 500px;
+  border-bottom-right-radius: 500px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.floating-images {
+  position: relative;
+  width: 100%;
+  right: 20%;
+  animation: float 3s ease-in-out infinite;
+}
+
+.hero {
+  position: relative;
+  width: 100%;
+  left: 40%;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px) rotate(-10deg);
   }
-  
+  50% {
+    transform: translateY(-10px) rotate(-8deg);
+  }
+  100% {
+    transform: translateY(0px) rotate(-10deg);
+  }
+}
+
+.Skills-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgb(236, 229, 225);
+}
+
+.Projects-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
+}
+
+footer {
+  background-color: #000000;
+  color: #ece5e1;
+  padding: 20px 0;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.footer-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer-social {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.footer-social a {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.footer-social i {
+  font-size: 3em;
+  color: #ece5e1;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+i:hover {
+  color: white;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
+    0 0 20px rgba(255, 255, 255, 0.6);
+}
