--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -185,7 +185,11 @@ linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
   height: 100vh;
   background-color: rgb(236, 229, 225);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+
+  background-image: linear-gradient(0deg, transparent 99%, gray 100%, gray 100%),
+linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
+  background-size: 95px 95px;
 }
 
 .skills-heading {
@@ -194,9 +198,67 @@ linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
   font-family: Impact;
 }
 
+.skills-boxes img {
+    width: 20%;
+    height: 100%;
+    margin: 0 2% 0 0;
+    object-fit: cover;
+}
+
+.skills-boxes {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 2rem;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.dev, .lang {
+    height: 60vh;
+    width: 40vw;
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    border-radius: 15px;
+    background-color: #ece5e1;
+    flex-wrap: wrap;
+    
+}
 
 
+.dev:hover, .lang:hover {
+    transform: translateY(-5px);
+}
 
+.imgs, .imgs2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding-top: 5%;
+}
+
+.details-dev , .details-cp {
+    font-family: poppins;
+    font-weight: 500;
+    padding: 20px;
+    padding: 23px;
+    font-size: 20px;
+}
+
+.github, .cp-links {
+    font-family: Impact;
+    font-size: 3em;
+    text-align: center;
+}
+
+.github a, .cp-links a {
+    color: black;
+    text-decoration: none;
+}
 
 
 
@@ -242,7 +304,7 @@ footer {
   transition: color 0.3s ease, text-shadow 0.3s ease;
 }
 
-i:hover {
+.foot-links:hover {
   color: white;
   text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
     0 0 20px rgba(255, 255, 255, 0.6);
