--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -513,8 +513,8 @@ footer {
 
 @media screen and (max-width: 480px) {
   nav ul {
-    flex-wrap: wrap;
-    justify-content: center;
+    font-size: 0.7rem;
+        justify-content: center;
   }
 
   nav {
@@ -522,6 +522,7 @@ footer {
   }
   
   .logo {
+    font-size: 0.9rem;
     align-items: center;
   }
   
