Update footer styling in style.css

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -549,6 +549,9 @@ footer {
     height: 35vh;
     border-radius: 0; 
     margin-left: 0; 
+    border-top-right-radius: 500px;
+    border-bottom-right-radius: 500px;
+
   }
   
   .hero {
