--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -372,13 +372,24 @@ nav ul li a:hover {
   margin-bottom: 20px;
 }
 
+.project {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%; /* Ensure the card stretches to the full height */
+}
+
 .project button {
-  margin-top: auto;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  background-color: black;
   cursor: pointer;
+  border: none;
+  border-radius: 40px;
+  background-color: black;
+  color: rgb(236, 229, 225);
+  padding: 10px 40%;
+  margin-top: auto;
+  font-family: Poppins, sans-serif;
+  font-weight: 500;
+  text-decoration: none;
   transition: all 0.3s ease;
 }
 
@@ -388,11 +399,10 @@ nav ul li a:hover {
 }
 
 .project button a {
-  color: rgb(236, 229, 225);
+  display: inline-block;
   text-decoration: none;
-  font-family: Poppins;
-  font-weight: 500;
 }
+
 
 footer {
   background-color: #000000;
