--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -376,7 +376,7 @@ nav ul li a:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%; /* Ensure the card stretches to the full height */
+  height: 100%; 
 }
 
 .project button {
