--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -288,11 +288,15 @@ nav ul li a:hover {
   font-size: 20px;
 }
 
-.github,
-.cp-links {
+.github {
   font-family: Impact;
   font-size: 3em;
   text-align: center;
+}
+.cp-links {
+  font-family: Impact;
+  text-align: center;
+  font-size: 0em;
 }
 
 .github a,
@@ -300,6 +304,30 @@ nav ul li a:hover {
   color: black;
   text-decoration: none;
 }
+.cp-links img {
+    width: 100%; 
+    height: auto; 
+    object-fit: contain;
+    max-width: 150px; 
+    max-height: 150px; 
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1280px) {
+  .cp-links img {
+      max-width: 120px; 
+      max-height: 120px; 
+  }
+  .cp-links {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+  }
+.lang {
+      overflow: hidden;
+  }
+}
+
 
 .Projects-page {
   height: 100vh;
