--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -18,7 +18,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2vh;
+  padding: 1vh;
   min-height: 8vh;
   background-color: rgba(0, 0, 0, 0.9);
   backdrop-filter: blur(5px);
@@ -83,7 +83,7 @@ nav ul li a:hover {
   display: flex;
   align-items: start;
   flex-direction: column;
-  margin: 3rem 0 2rem 0;
+  margin: 4rem 0 2rem 0;
 }
 
 .name {
@@ -196,6 +196,7 @@ nav ul li a:hover {
   background-image: linear-gradient(0deg, transparent 99%, gray 100%, gray 100%),
     linear-gradient(90deg, transparent 99%, gray 100%, gray 100%);
   background-size: 95px 95px;
+  margin-top: 3rem;
 }
 
 .skills-heading {
