Update font size in navigation styles

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -288,7 +288,7 @@ nav ul li a:hover {
   font-family: poppins;
   font-weight: 500;
   padding: 1rem;
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
 .github {
