--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -714,3 +714,29 @@ footer {
   justify-content: center;
 }
 
+.form input {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid rgb(236, 229, 225);
+  background-color: transparent;
+  color: rgb(236, 229, 225);
+  font-family: Poppins, sans-serif;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
+}
+
+.form textarea {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid rgb(236, 229, 225);
+  background-color: transparent;
+  color: rgb(236, 229, 225);
+  font-family: Poppins, sans-serif;
+  font-size: 16px;
+  transition: border-color 0.3s ease;
+}
+
+.form textarea {
+  height: 150px;
+}
+
