Update form textarea and input focus border color

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -757,8 +757,10 @@ footer {
 
 form textarea:focus {
   border-color: #ffcc00;
+  outline: none;
 }
 
 form input:focus {
   border-color: #ffcc00;
+  outline: none;
 }
