--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -764,3 +764,10 @@ form input:focus {
   border-color: #ffcc00;
   outline: none;
 }
+
+@media screen and (max-width: 768px) {
+  .heading h1 {
+    font-size: 8vw;
+  }
+}
+
